# overai-windows

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
overai/: __init__.py  __main__.py  app.py  config.py  constants.py  health_checks.py  hotkey.py  launcher.py  logger.py  main.py  tray.py
overai/about/: author.txt  description.txt
overai/assets/: index.html
