[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overai"
version = "1.0.0"
description = "A sleek, always-on-top Windows overlay that brings AI chat services directly to your desktop."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Praveen"},
]
keywords = ["ai", "overlay", "windows", "grok", "chatgpt", "claude", "gemini", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "pywebview>=5.0",
    "keyboard>=0.13.5",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/fahadzubair/overai-windows"
Repository = "https://github.com/fahadzubair/overai-windows"
Issues = "https://github.com/fahadzubair/overai-windows/issues"

[project.scripts]
overai = "overai.main:main"

[tool.setuptools.packages.find]
include = ["overai*"]

[tool.setuptools.package-data]
overai = ["assets/*", "about/*"]
